fix country code dropdown visibility on mobile, tablet, and desktop

--- a/style.css
+++ b/style.css
@@ -489,12 +489,13 @@ label {
 }
 
 .country-code-wrapper {
-    flex: 0 0 115px;
+    flex: 0 0 120px;
 }
 
-.country-code-wrapper select {
-    padding-left: 16px;
-    background-position: right 10px center;
+.phone-input-group .country-code-wrapper select {
+    padding-left: 10px;
+    padding-right: 24px;
+    background-position: right 8px center;
 }
 
 .phone-number-wrapper {
@@ -1077,7 +1078,13 @@ label {
     }
 
     .country-code-wrapper {
-        flex: 0 0 90px;
+        flex: 0 0 110px;
+    }
+
+    .phone-input-group .country-code-wrapper select {
+        padding-left: 10px;
+        padding-right: 24px;
+        background-position: right 8px center;
     }
 
     .phone-input-group {
